fix context menu z-index

--- a/Source/Tam/Maestro/UI/BroadcastComposerWebUI/src/app/patterns/ContextMenuRow/index.style.scss
+++ b/Source/Tam/Maestro/UI/BroadcastComposerWebUI/src/app/patterns/ContextMenuRow/index.style.scss
@@ -1,3 +1,5 @@
-.react-contexify {
+:global {
+  .react-contexify {
     z-index: 9999;
+  }
 }
